--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,10 @@
-name: Your New Jekyll Site
-description: Blogging about stuffs
-meta_description: "Your New Jekyll Site, Blogging about stuffs"
+name: Machine trading
+description: Blogging about stuffs, mostly to impress job recruiters
+meta_description: "Online machine learning for trading"
+plugins: [jekyll-paginate]
 
 markdown: kramdown
-highlighter: pygments
+highlighter: rouge
 logo: false
 paginate: 15
 baseurl: /
@@ -11,6 +12,3 @@ domain_name: 'http://yourblog-domain.com'
 google_analytics: 'UA-XXXXXXXX-X'
 gems: [jekyll-paginate]
 
-# Details for the RSS feed generator
-url:            'blog url'
-author:         'Your Name'
