--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-name: Machine trading
-description: Blogging about stuffs, mostly to impress job recruiters
-meta_description: "Online machine learning for trading"
+name: cryptometrics
+description: Quantitative cryptocurrencies market analysis
+meta_description: "Quantitative market analysis (mostly cryptos)"
 plugins: [jekyll-paginate]
 
 markdown: kramdown
@@ -8,7 +8,6 @@ highlighter: rouge
 logo: false
 paginate: 15
 baseurl: /
-domain_name: 'http://yourblog-domain.com'
-google_analytics: 'UA-XXXXXXXX-X'
+domain_name: 'http://ignaziobovo.com'
 gems: [jekyll-paginate]
 
